more reliable semver when not in git working directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,37 +10,50 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 add_compile_options(-Wall -Wextra -pedantic -Wstrict-aliasing -Werror)
 
-# git diff
 execute_process(
-	COMMAND git diff --quiet --exit-code
-	RESULTS_VARIABLE GIT_DIFF_RESULT
-)
-
-# git tag
-execute_process(
-	COMMAND git describe --exact-match --tags
-	OUTPUT_VARIABLE GIT_TAG ERROR_QUIET
-)
-
-# indicate if anything's different between HEAD and current tracked files
-if (${GIT_DIFF_RESULT})
-	set(GIT_DIFF "-dirty")
-endif()
-
-# Change prerelease if this is a tagged commit
-set(PROJECT_VERSION_PRERELEASE "wip")
-if (${GIT_TAG})
-	set(PROJECT_VERSION_PRERELEASE "release")
-endif()
-
-# git commit hash
-execute_process(
-	COMMAND git log -1 --format=%h
-	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-	OUTPUT_VARIABLE GIT_COMMIT_HASH
+	COMMAND git rev-parse --is-inside-work-tree
+	OUTPUT_VARIABLE GIT_IS_INSIDE_WORK_TREE
 	OUTPUT_STRIP_TRAILING_WHITESPACE
 )
 
+set(PROJECT_VERSION_FULL "${PROJECT_VERSION}")
+
+if (${GIT_IS_INSIDE_WORK_TREE})
+	# git commit hash
+	execute_process(
+		COMMAND git log -1 --format=%h
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE GIT_COMMIT_HASH
+		OUTPUT_STRIP_TRAILING_WHITESPACE
+	)
+
+	# git tag
+	execute_process(
+		COMMAND git describe --exact-match --tags
+		OUTPUT_VARIABLE GIT_TAG ERROR_QUIET
+	)
+
+	# git diff
+	execute_process(
+		COMMAND git diff --quiet --exit-code
+		RESULTS_VARIABLE GIT_DIFF_RESULT
+	)
+
+	# Change prerelease if this is a tagged commit
+	set(PROJECT_VERSION_PRERELEASE "wip")
+	if (NOT ${GIT_TAG} EQUAL "")
+		set(PROJECT_VERSION_PRERELEASE "release")
+	endif()
+
+	set(PROJECT_VERSION_FULL "${PROJECT_VERSION_FULL}-${PROJECT_VERSION_PRERELEASE}")
+	set(PROJECT_VERSION_FULL "${PROJECT_VERSION_FULL}+${GIT_COMMIT_HASH}")
+
+	# indicate if anything's different between HEAD and current tracked files
+	if (${GIT_DIFF_RESULT})
+		set(PROJECT_VERSION_FULL "${PROJECT_VERSION_FULL}-dirty")
+	endif()
+
+endif()
 
 configure_file(
 	${CMAKE_SOURCE_DIR}/versioning.hh.in
