--- a/versioning.hh.in
+++ b/versioning.hh.in
@@ -3,6 +3,5 @@
 #define PROJECT_VER_MAJOR @PROJECT_VERSION_MAJOR@
 #define PROJECT_VER_MINOR @PROJECT_VERSION_MINOR@
 #define PROJECT_VER_PATCH @PROJECT_VERSION_PATCH@
-#define PROJECT_VER_PRERELEASE "@PROJECT_VERSION_PRERELEASE@"
-#define PROJECT_VER "@PROJECT_VERSION@-@PROJECT_VERSION_PRERELEASE@+@GIT_COMMIT_HASH@@GIT_DIFF@"
+#define PROJECT_VER_STRING "@PROJECT_VERSION_FULL@"
 
