--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,6 +20,8 @@ jobs:
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
     - name: Build tests
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target build-test
+    - name: Build docs
+      run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} --target doc
     - name: Test
       working-directory: ${{github.workspace}}/build
       run: make check
